--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -77,7 +77,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{114, 5}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="586141257"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="110862525"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -92,8 +91,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{114, 5}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="586141257"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="480929129"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -130,7 +127,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 102}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859793055"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -486,8 +482,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 69}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="328273835"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -516,7 +510,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 159}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="884400685"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -1229,181 +1222,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">83</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">UserViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="loadPhoto:">id</string>
-						<string key="userBlockedApps:">id</string>
-						<string key="userLogOut:">id</string>
-						<string key="userLogin:">id</string>
-						<string key="userPinnedApps:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="loadPhoto:">
-							<string key="name">loadPhoto:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userBlockedApps:">
-							<string key="name">userBlockedApps:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userLogOut:">
-							<string key="name">userLogOut:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userLogin:">
-							<string key="name">userLogin:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userPinnedApps:">
-							<string key="name">userPinnedApps:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="footerClearButton">UIButton</string>
-						<string key="footerClearButtonLabel">UILabel</string>
-						<string key="footerSignOutButton">UIButton</string>
-						<string key="footerSignOutButtonLabel">UILabel</string>
-						<string key="footerView">UIView</string>
-						<string key="list">UITableView</string>
-						<string key="listEmptyView">UIView</string>
-						<string key="listEmptyViewLabel">UILabel</string>
-						<string key="listHeaderBlocksButton">UIButton</string>
-						<string key="listHeaderBlocksLabel">UILabel</string>
-						<string key="listHeaderPinsButton">UIButton</string>
-						<string key="listHeaderPinsLabel">UILabel</string>
-						<string key="listHeaderView">UIView</string>
-						<string key="scroll">UIScrollView</string>
-						<string key="userImageButton">UIButton</string>
-						<string key="userImageImageView">UIImageView</string>
-						<string key="userImageView">UIView</string>
-						<string key="userInfo">UIView</string>
-						<string key="userInfoPressed">UIView</string>
-						<string key="userInfoPressedButtonOk">UIView</string>
-						<string key="userInfoPressedEmailEditText">UITextField</string>
-						<string key="userInfoPressedNameEditText">UITextField</string>
-						<string key="userInfoUnpressed">UIView</string>
-						<string key="userInfoUnpressedEmail">UILabel</string>
-						<string key="userInfoUnpressedName">UILabel</string>
-						<string key="userInfoUnpressedWarningText">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="footerClearButton">
-							<string key="name">footerClearButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerClearButtonLabel">
-							<string key="name">footerClearButtonLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerSignOutButton">
-							<string key="name">footerSignOutButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerSignOutButtonLabel">
-							<string key="name">footerSignOutButtonLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerView">
-							<string key="name">footerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="list">
-							<string key="name">list</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listEmptyView">
-							<string key="name">listEmptyView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listEmptyViewLabel">
-							<string key="name">listEmptyViewLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderBlocksButton">
-							<string key="name">listHeaderBlocksButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderBlocksLabel">
-							<string key="name">listHeaderBlocksLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderPinsButton">
-							<string key="name">listHeaderPinsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderPinsLabel">
-							<string key="name">listHeaderPinsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderView">
-							<string key="name">listHeaderView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scroll">
-							<string key="name">scroll</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageButton">
-							<string key="name">userImageButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageImageView">
-							<string key="name">userImageImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageView">
-							<string key="name">userImageView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfo">
-							<string key="name">userInfo</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressed">
-							<string key="name">userInfoPressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedButtonOk">
-							<string key="name">userInfoPressedButtonOk</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedEmailEditText">
-							<string key="name">userInfoPressedEmailEditText</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedNameEditText">
-							<string key="name">userInfoPressedNameEditText</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressed">
-							<string key="name">userInfoUnpressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedEmail">
-							<string key="name">userInfoUnpressedEmail</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedName">
-							<string key="name">userInfoUnpressedName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedWarningText">
-							<string key="name">userInfoUnpressedWarningText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UserViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
