--- a/Mapplas/Mapplas/classes/NotificationCell.xib
+++ b/Mapplas/Mapplas/classes/NotificationCell.xib
@@ -140,7 +140,7 @@
 							<object class="IBUILabel" id="55461235">
 								<reference key="NSNextResponder" ref="1071709291"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{73, 30}, {42, 21}}</string>
+								<string key="NSFrame">{{73, 30}, {237, 32}}</string>
 								<reference key="NSSuperview" ref="1071709291"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -150,16 +150,18 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
+								<string key="IBUIText">Label Label LabelLabel Label Label Label Label</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4yNTg4MjM1Mjk0IDAuMjU4ODIzNTI5NCAwLjI1ODgyMzUyOTQAA</bytes>
 								</object>
 								<reference key="IBUIHighlightedColor" ref="738453784"/>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">2</int>
 								<reference key="IBUIFontDescription" ref="493700806"/>
 								<reference key="IBUIFont" ref="1043206809"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">237</double>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 71}</string>
@@ -295,21 +297,21 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="649457872">
+							<object class="IBNSLayoutConstraint" id="877606272">
 								<reference key="firstItem" ref="55461235"/>
-								<int key="firstAttribute">5</int>
+								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="1010700473"/>
-								<int key="secondAttribute">5</int>
+								<reference key="secondItem" ref="656246455"/>
+								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">73</double>
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="1010700473"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="937525657">
 								<reference key="firstItem" ref="55461235"/>
@@ -342,6 +344,22 @@
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="649457872">
+								<reference key="firstItem" ref="505548347"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="1010700473"/>
+								<int key="secondAttribute">5</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">73</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="1010700473"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="1071082613">
 								<reference key="firstItem" ref="865517470"/>
@@ -653,7 +671,7 @@
 						<int key="objectID">51</int>
 						<reference key="object" ref="55461235"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="524895286">
+							<object class="IBNSLayoutConstraint" id="686061178">
 								<reference key="firstItem" ref="55461235"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -661,23 +679,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">21</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="55461235"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">1</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="1047696007">
-								<reference key="firstItem" ref="55461235"/>
-								<int key="firstAttribute">7</int>
-								<int key="relation">0</int>
-								<nil key="secondItem"/>
-								<int key="secondAttribute">0</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">42</double>
+									<double key="value">32</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="55461235"/>
@@ -695,23 +697,23 @@
 						<reference key="parent" ref="1010700473"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">63</int>
+						<reference key="object" ref="649457872"/>
+						<reference key="parent" ref="1010700473"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">64</int>
+						<reference key="object" ref="877606272"/>
+						<reference key="parent" ref="1010700473"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">55</int>
 						<reference key="object" ref="937525657"/>
 						<reference key="parent" ref="1010700473"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">56</int>
-						<reference key="object" ref="649457872"/>
-						<reference key="parent" ref="1010700473"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">57</int>
-						<reference key="object" ref="1047696007"/>
-						<reference key="parent" ref="55461235"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">58</int>
-						<reference key="object" ref="524895286"/>
+						<int key="objectID">67</int>
+						<reference key="object" ref="686061178"/>
 						<reference key="parent" ref="55461235"/>
 					</object>
 				</array>
@@ -736,9 +738,10 @@
 					<reference ref="142215056"/>
 					<reference ref="73777178"/>
 					<reference ref="1071082613"/>
+					<reference ref="649457872"/>
 					<reference ref="48027708"/>
 					<reference ref="937525657"/>
-					<reference ref="649457872"/>
+					<reference ref="877606272"/>
 					<reference ref="738576846"/>
 					<reference ref="805455852"/>
 					<reference ref="176343368"/>
@@ -775,22 +778,21 @@
 				<string key="49.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="50.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="51.IBViewMetadataConstraints">
-					<reference ref="1047696007"/>
-					<reference ref="524895286"/>
+				<array class="NSMutableArray" key="51.IBViewMetadataConstraints">
+					<reference ref="686061178"/>
 				</array>
 				<boolean value="NO" key="51.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="54.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="55.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="63.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">62</int>
+			<int key="maxID">67</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
