--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -554,7 +554,7 @@
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
-				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics" id="615330993">
+				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics" id="856089988">
 					<string key="IBUISimulatedSizeMetricsClass">IBUIScreenMetrics</string>
 					<object class="NSMutableDictionary" key="IBUINormalizedOrientationToSizeMap">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -580,7 +580,7 @@
 				<float key="IBUISectionHeaderHeight">22</float>
 				<float key="IBUISectionFooterHeight">22</float>
 			</object>
-			<object class="IBUITableView" id="458191552">
+			<object class="IBUITableView" id="669894947">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<string key="NSFrameSize">{320, 568}</string>
@@ -590,9 +590,12 @@
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
-				<reference key="IBUISimulatedDestinationMetrics" ref="615330993"/>
+				<reference key="IBUISimulatedDestinationMetrics" ref="856089988"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIAlwaysBounceVertical">YES</bool>
+				<bool key="IBUIScrollEnabled">NO</bool>
+				<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+				<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
 				<int key="IBUIStyle">1</int>
 				<int key="IBUISeparatorStyle">2</int>
 				<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
@@ -784,7 +787,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">configTable</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="458191552"/>
+						<reference key="destination" ref="669894947"/>
 					</object>
 					<int key="connectionID">97</int>
 				</object>
@@ -859,7 +862,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="458191552"/>
+						<reference key="source" ref="669894947"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">95</int>
@@ -867,7 +870,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="458191552"/>
+						<reference key="source" ref="669894947"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">96</int>
@@ -1060,7 +1063,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">94</int>
-						<reference key="object" ref="458191552"/>
+						<reference key="object" ref="669894947"/>
 						<reference key="parent" ref="0"/>
 					</object>
 				</array>
@@ -1118,7 +1121,6 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="loadPhoto:">id</string>
 						<string key="userBlockedApps:">id</string>
-						<string key="userLogOut:">id</string>
 						<string key="userLogin:">id</string>
 						<string key="userPinnedApps:">id</string>
 					</dictionary>
@@ -1129,10 +1131,6 @@
 						</object>
 						<object class="IBActionInfo" key="userBlockedApps:">
 							<string key="name">userBlockedApps:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userLogOut:">
-							<string key="name">userLogOut:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="userLogin:">
